src/test/deca/syntax/invalid/resultats/test34_class_decl-synt.res
./src/test/deca/syntax/invalid/test34_class_decl.deca:16:0: missing '}' at '<EOF>'
